Corrected minor typo

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-typescript-flight-indicators",
   "version": "1.0.0",
-  "description": "A React + Typescript porting of react-flight-indicators (https://github.com/skyhop/react-flight-indicators)",
+  "description": "A React + TypeScript porting of react-flight-indicators (https://github.com/skyhop/react-flight-indicators)",
   "author": "Starnuto di topo",
   "license": "GPL-3.0",
   "keywords": [
