--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,6 +10,11 @@
 		}
 	},
 
+	// Set the CHOKIDAR_USEPOLLING to true to enable polling for changes
+	// of files and subsequent automatic to recompilation.
+	// See: https://stackoverflow.com/a/44643246/1288109
+	"containerEnv": { "CHOKIDAR_USEPOLLING": "true" },
+
 	// Set *default* container specific settings.json values on container create.
 	"settings": { 
 		"terminal.integrated.shell.linux": "/bin/bash"
@@ -26,7 +31,6 @@
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "yarn install",
 	"postCreateCommand": "sudo chmod 777 -R .",
-
 
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "node"
